--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('./general.css');
+@import url('./header.css');
+@import url('./aside.css');
 @import url('./main.css');
